Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5704

[AMQP 1.0] dangling reference to domain in InterconnectFactory

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.26
    • None
    • C++ Broker
    • None

    Description

      If a domain is deleted while referred to be an InterconnectFactory, that reference will be invalid and if used will cause a segfault (e.g. if a pending link attempt fails).

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: