QPID-5704: use shared pointer to avoid dangling referece to domain

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1587998 13f79535-47bb-0310-9956-ffa450edef68